Bit more stuff, headings

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,19 +8,26 @@
     <link rel="stylesheet" href="{% static 'core/css/index.css' %}">
     <title>bridge</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
   </head>
   <body>
 
     <!-- All the UI stuff -->
     <div class='fullpage'>
         <div class='leftpane pane'>
-            l
+            <div class='card small heading' id='lheading'>
+                NAVIGATION
+            </div>
         </div>
         <div class='midpane pane'>
-            m
+            <div class='card small heading' id='mheading'>
+                Hai meain
+            </div>
         </div>
         <div class='rightpane pane'>
-            r
+            <div class='card small heading' id='rheading'>
+                UPCOMING
+            </div>
         </div>
     </div>
 
