--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -30,3 +30,39 @@ body{
     width: 20vw;
     height: calc(100% - 80px);
 }
+.card.small{
+    padding: 5px;
+    margin: 5px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
+}
+.card.medium{
+    padding: 10px;
+    margin: 8px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
+}
+.card.large{
+    padding: 15px;
+    margin: 10px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
+}
+.heading{
+    width: calc(100% - 20px);
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Baloo Paaji', cursive;
+}
+#lheading{
+    color: #f5f5f5;
+    background-color: #16a085;
+}
+#mheading{
+    color: #f5f5f5;
+    background-color: #e74c3c;
+}
+#rheading{
+    color: #f5f5f5;
+    background-color: #2980b9;
+}
