--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -9,6 +9,7 @@
     <title>bridge</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Happy+Monkey" rel="stylesheet">
   </head>
   <body>
 
@@ -20,17 +21,21 @@
             </div>
         </div>
         <div class='midpane pane'>
-            <div class='card small heading' id='mheading'>
-                Hai meain
+            <div class='heading' id='mheading'>
+                Juliet Andy
+                <img id="profile-image" src="https://thumbs.dreamstime.com/z/beautiful-profile-face-young-woman-clean-fresh-skin-40988715.jpg" alt="profile">
             </div>
         </div>
         <div class='rightpane pane'>
             <div class='card small heading' id='rheading'>
                 UPCOMING
             </div>
+            <div class='content' id='rcontent'>
+            </div>
         </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="{% static 'core/js/index.js' %}"></script>
   </body>
 </html>
