--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -3,10 +3,12 @@ body{
     width: 100vw;
     height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 .fullpage{
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 .pane{
     padding: 10px;
@@ -29,6 +31,17 @@ body{
 .rightpane{
     width: 20vw;
     height: calc(100% - 80px);
+}
+@media screen and (max-width: 480px){
+    .leftpane{
+        display: none;
+    }
+    .rightpane{
+        display: none;
+    }
+    .midpane{
+        width: calc(100vw - 40px);
+    }
 }
 .card.tiny{
     padding: 1px;
@@ -58,28 +71,30 @@ body{
     width: calc(100% - 20px);
     font-size: 20px;
     text-align: center;
-    font-family: 'Happy Monkey', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 #lheading{
     color: #f5f5f5;
     /* background-color: #16a085; */
-    background-color: #e74c3c;
+    background-color: rgba(192, 57, 43,0.75);
 }
 #mheading{
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Happy Monkey', cursive;
+    display: inline-block;
     color: #000;
     /* background-color: #e74c3c; */
     float: right;
-    text-align: right;
-    padding-right: 30px;
-    /* don't know why this padding is not showing up */
-    padding-top: 10px;
+    padding-top: 5px;
 }
 #rheading{
     color: #f5f5f5;
-    background-color: #2980b9;
+    background-color: rgba(41, 128, 185,0.75);
 }
 .content{
     height: calc(100% - 70px);
+    overflow: auto;
 }
 .event{
     float: left;
@@ -99,19 +114,30 @@ body{
     font-size: 16px;
     font-weight: bold;
 }
-.span.red{
-    /* background-color: red; */
-    /* color: #fff; */
-    /* padding:2px; */
-    /* padding-left: 5px; */
-    /* padding-right: 5px; */
-    color: red;
+.span{
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-top: 1px;
+    padding-bottom: 1px;
 }
-.span.blue{
-    color: blue;
+.red{
+    background-color: rgba(192, 57, 43,0.5);
+}
+.blue{
+    background-color: rgba(41, 128, 185,0.5);
+}
+.span.white{
+    background-color: #fff;
+    color: rgba(44, 62, 80,1.0);
+}
+.span-content{
+
 }
 #profile-image{
     width: 7%;
     border-radius: 50px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+}
+#profile-name{
+    margin-bottom: 10px;
 }
