--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="{% static 'core/css/index.css' %}">
     <title>bridge</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Happy+Monkey" rel="stylesheet">
   </head>
   <body>
@@ -17,18 +16,18 @@
     <div class='fullpage'>
         <div class='leftpane pane'>
             <div class='card small heading' id='lheading'>
-                NAVIGATION
+                Navigation
             </div>
         </div>
         <div class='midpane pane'>
-            <div class='heading' id='mheading'>
-                Juliet Andy
-                <img id="profile-image" src="https://thumbs.dreamstime.com/z/beautiful-profile-face-young-woman-clean-fresh-skin-40988715.jpg" alt="profile">
+            <div id='mheading'>
+                <div id='profile-name'></div>
+                <img id="profile-image" src="" alt="profile">
             </div>
         </div>
         <div class='rightpane pane'>
             <div class='card small heading' id='rheading'>
-                UPCOMING
+                Upcoming
             </div>
             <div class='content' id='rcontent'>
             </div>
