--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -141,3 +141,27 @@ body{
 #profile-name{
     margin-bottom: 10px;
 }
+#timetable-banner{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 10px;
+}
+.timetable-subject{
+    display: inline-block;
+    white-space:nowrap;
+    float: left;
+    padding-bottom: 3px;
+    text-transform: uppercase;
+    font-size: 15px;
+    border-bottom: 1px solid #fff;
+    transition-property: border-bottom;
+    transition-duration: 1s;
+}
+.timetable-subject:hover{
+    /* text-decoration: underline; */
+    border-bottom: 1px solid #000;
+}
