--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -52,26 +52,23 @@ body{
 .card.small{
     padding: 5px;
     margin: 5px;
-    border-radius: 3px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
 }
 .card.medium{
     padding: 10px;
     margin: 8px;
-    border-radius: 3px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
 }
 .card.large{
     padding: 15px;
     margin: 10px;
-    border-radius: 3px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
 }
 .heading{
     width: calc(100% - 20px);
     font-size: 20px;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 #lheading{
     color: #f5f5f5;
@@ -81,7 +78,8 @@ body{
 #mheading{
     font-size: 20px;
     text-align: center;
-    font-family: 'Happy Monkey', cursive;
+    /* font-family: 'Happy Monkey', cursive; */
+    font-family: 'Josefin Sans', sans-serif;
     display: inline-block;
     color: #000;
     /* background-color: #e74c3c; */
@@ -103,14 +101,16 @@ body{
 .date-card{
     float: right;
     background-color: #e74c3c;
-    font-family: 'Happy Monkey', cursive;
+    /* font-family: 'Happy Monkey', cursive; */
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 14px;
     font-weight: bold;
     color: #f5f5f5;
 }
 .subject-card{
     clear: both;
-    font-family: 'Happy Monkey', cursive;
+    /* font-family: 'Happy Monkey', cursive; */
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     font-weight: bold;
 }
@@ -147,7 +147,8 @@ body{
     width: 100%;
     font-size: 20px;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Josefin Sans', sans-serif;
     padding-top: 10px;
 }
 .timetable-subject{
