Fix a bit of content positioning

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -25,6 +25,8 @@
                 <div id='profile-name'></div>
                 <img id="profile-image" src="" alt="profile">
             </div>
+            <div id='mcontent'>
+            </div>
         </div>
         <div class='rightpane pane'>
             <div class='card small heading' id='rheading'>
