--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -86,6 +86,11 @@ body{
     float: right;
     padding-top: 5px;
 }
+#mcontent{
+    width: 100%;
+    /* height: calc(100% - 90px); */
+    height: 100%;
+}
 #rheading{
     color: #f5f5f5;
     background-color: rgba(41, 128, 185,0.75);
