--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -171,3 +171,32 @@ body{
     /* text-decoration: underline; */
     border-bottom: 1px solid #000;
 }
+#login-popup{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #f5f5f5;
+}
+.g-signin2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#bridge-in-signin-popup{
+    text-align: center;
+    font-size: 50px;
+    /* font-family: 'Josefin Sans', sans-serif; */
+    font-family: 'Righteous', cursive;
+    padding-bottom: 20px;
+}
+#dummy-profile-image{
+    width: 250px;
+    height: 250px;
+    border-radius: 150px;
+    margin-bottom: 30px;
+}
