Signin signout flow complete

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -24,8 +24,8 @@
         </div>
         <div class='midpane pane'>
             <div id='mheading'>
-                <div id='profile-name'></div>
                 <img id="profile-image" src="" alt="profile">
+                <div id='profile-name'></div>
             </div>
             <div id='mcontent'>
             </div>
@@ -46,6 +46,15 @@
                 BRIDGE
             </div>
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </div>
+    </div>
+
+    <div class="popup">
+        <div class="popup-content" id="signout-popup">
+            <img id="popup-profile-image" src="" alt="profile">
+            <div id='popup-profile-name'></div>
+            <div id='popup-profile-email'></div>
+            <div id='popup-profile-signout-button'>SIGN OUT</div>
         </div>
     </div>
 
