--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -85,6 +85,7 @@ body{
     /* background-color: #e74c3c; */
     float: right;
     padding-top: 5px;
+    width: 100%;
 }
 #mcontent{
     width: 100%;
@@ -135,11 +136,8 @@ body{
     background-color: #fff;
     color: rgba(44, 62, 80,1.0);
 }
-.span-content{
-
-}
 #profile-image{
-    width: 7%;
+    width: 50px;
     border-radius: 50px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
@@ -199,4 +197,39 @@ body{
     height: 250px;
     border-radius: 150px;
     margin-bottom: 30px;
+}
+.popup{
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    display: none;
+    /* will be changed to flex */
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+}
+.hidden{
+    display: none;
+}
+#signout-popup{
+    padding: 50px;
+    padding-left: 200px;
+    padding-right: 200px;
+    text-align: center;
+    color: rgba(127, 140, 141,1.0);
+    background-color: #fff;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+    font-family: 'Josefin Sans', sans-serif;
+}
+#popup-profile-signout-button{
+    margin-top: 20px;
+    padding: 10px;
+    padding-top: 12px;
+    background-color: rgba(44, 62, 80,1.0);
+    color: #fff;
+}
+#popup-profile-image{
+    margin-bottom: 10px;
+    border-radius: 50px;
 }
