Mostly attendece tracking remaining

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -28,6 +28,28 @@
                 <div id='profile-name'></div>
             </div>
             <div id='mcontent'>
+                <div id="subject-data" class="card huge">
+                    <div id="subject-name" class="subject-module">
+                        <span class='span red name'>subject</span>
+                        <span class='span white span-content'>Mathematics</span>
+                    </div>
+                    <div id="teacher-name" class="subject-module">
+                        <span class='span blue name'>teacher</span>
+                        <span class='span white span-content'>Adam Levin</span>
+                    </div>
+                    <div id="subject-time" class="subject-module">
+                        <span class='span green name'>time</span>
+                        <span class='span white span-content'>9:30</span>
+                    </div>
+                    <div id="subject-notes" class="subject-module">
+                        <span class='span yellow name'>notes</span>
+                        <!-- <span class='span white span-content'>Adam Levin</span> -->
+                        <!-- <textarea rows="4" cols="50"> -->
+                        <!--     Random notes added in by user -->
+                        <!-- </textarea> -->
+                    </div>
+                    <textarea id='notes-text' rows="15" placeholder='Boo, enter your notes here'></textarea>
+                </div>
             </div>
         </div>
         <div class='rightpane pane'>
