--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -4,6 +4,7 @@ body{
     height: 100vh;
     margin: 0;
     overflow: hidden;
+    font-family: 'Josefin Sans', sans-serif;
 }
 .fullpage{
     width: 100%;
@@ -32,7 +33,7 @@ body{
     width: 20vw;
     height: calc(100% - 80px);
 }
-@media screen and (max-width: 480px){
+@media screen and (max-width: 1050px){
     .leftpane{
         display: none;
     }
@@ -61,6 +62,11 @@ body{
 }
 .card.large{
     padding: 15px;
+    margin: 10px;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
+}
+.card.huge{
+    padding: 35px;
     margin: 10px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
 }
@@ -132,6 +138,21 @@ body{
 .blue{
     background-color: rgba(41, 128, 185,0.5);
 }
+.green{
+    background-color: rgba(39, 174, 96,0.5);
+}
+.yellow{
+    background-color: rgba(243, 156, 18,0.5);
+}
+.orange{
+    background-color: rgba(211, 84, 0,0.5);
+}
+.violet{
+    background-color: rgba(142, 68, 173,0.5);
+}
+.black{
+    background-color: rgba(44, 62, 80,0.5);
+}
 .span.white{
     background-color: #fff;
     color: rgba(44, 62, 80,1.0);
@@ -153,6 +174,7 @@ body{
     /* font-family: 'Roboto', sans-serif; */
     font-family: 'Josefin Sans', sans-serif;
     padding-top: 10px;
+    overflow-x: auto;
 }
 .timetable-subject{
     display: inline-block;
@@ -232,4 +254,25 @@ body{
 #popup-profile-image{
     margin-bottom: 10px;
     border-radius: 50px;
+}
+#subject-data{
+    height: calc( 100% - 210px );
+    font-family: 'Josefin Sans', sans-serif;
+    overflow: auto;
+}
+.subject-module{
+    padding: 10px;
+}
+#notes-text{
+    padding: 10px;
+    margin: 10px;
+    margin-top: 0;
+    text-align: left;
+    outline: none;
+    resize: none;
+    width: 95%;
+    background-color: rgba(44, 62, 80,0.15);
+    border-color: #fff;
+    color: #000;
+    font-size: 13px;
 }
