Woops, finally fixed loding of subject data

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,3 +1,4 @@
+<!-- Add animations if time permits, use animate.css -->
 <!DOCTYPE html>{% load staticfiles %}
 <html lang="en">
   <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-signin-client_id" content="1063943850637-et38ok0k5jtfh19n17m6qa2bsmjitj60.apps.googleusercontent.com">
-    <link rel="shortcut icon" href="{%  static 'core/images/favicon.png' %}">
+    <link rel="shortcut icon" href="{%  static 'core/images/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'core/css/index.css' %}">
     <title>bridge</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet" type="text/css">
@@ -29,24 +30,21 @@
             </div>
             <div id='mcontent'>
                 <div id="subject-data" class="card huge">
+                    <!-- Use data tag  with the above element to store the period number -->
                     <div id="subject-name" class="subject-module">
                         <span class='span red name'>subject</span>
-                        <span class='span white span-content'>Mathematics</span>
+                        <span class='span white span-content' id='subject-name-content'></span>
                     </div>
                     <div id="teacher-name" class="subject-module">
                         <span class='span blue name'>teacher</span>
-                        <span class='span white span-content'>Adam Levin</span>
+                        <span class='span white span-content' id='teacher-name-content'></span>
                     </div>
                     <div id="subject-time" class="subject-module">
                         <span class='span green name'>time</span>
-                        <span class='span white span-content'>9:30</span>
+                        <span class='span white span-content' id='subject-time-content'></span>
                     </div>
                     <div id="subject-notes" class="subject-module">
                         <span class='span yellow name'>notes</span>
-                        <!-- <span class='span white span-content'>Adam Levin</span> -->
-                        <!-- <textarea rows="4" cols="50"> -->
-                        <!--     Random notes added in by user -->
-                        <!-- </textarea> -->
                     </div>
                     <textarea id='notes-text' rows="15" placeholder='Boo, enter your notes here'></textarea>
                 </div>
@@ -63,7 +61,7 @@
 
     <div id="login-popup">
         <div id="login-stuff">
-            <img id="dummy-profile-image" src="https://lh3.googleusercontent.com/-qtfYMkBqTLU/U_Q0cLPPDbI/AAAAAAAAAGA/oWjn15ONPr4-gesBP6FmjrLWwBtlmXKLgCL0B/s1000-fcrop64=1,41490000ffa7be9f/low_poly_flower_by_maty241-d5oy8q8.png">
+            <img id="dummy-profile-image" src="{%  static 'core/images/logo.jpg' %}">
             <div id="bridge-in-signin-popup">
                 BRIDGE
             </div>
