--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -217,6 +217,7 @@ body{
     width: 100vw;
     height: 100vh;
     background-color: #f5f5f5;
+    z-index: 100;
 }
 .g-signin2{
     display: flex;
@@ -259,6 +260,7 @@ body{
     background-color: #fff;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     font-family: 'Josefin Sans', sans-serif;
+    z-index: 50;
 }
 #popup-profile-signout-button{
     margin-top: 20px;
