--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -92,7 +92,7 @@ body{
 }
 .heading{
     width: calc(100% - 20px);
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -120,6 +120,14 @@ body{
 #rheading{
     color: #f5f5f5;
     background-color: rgba(41, 128, 185,0.75);
+}
+.navel{
+    padding: 10px;
+    padding-top: 20px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #ded;
+	cursor: pointer;
 }
 .content{
     height: calc(100% - 70px);
