--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -22,6 +22,18 @@
             <div class='card small heading' id='lheading'>
                 Navigation
             </div>
+            <div class='navel'>
+				Home
+            </div>
+            <div class='navel'>
+				Notes
+            </div>
+            <div class='navel'>
+				Attendence
+            </div>
+            <div class='navel'>
+				About
+            </div>
         </div>
         <div class='midpane pane'>
             <div id='mheading'>
