Notes view complete

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -22,16 +22,16 @@
             <div class='card small heading' id='lheading'>
                 Navigation
             </div>
-            <div class='navel'>
+            <div class='navel' id='home'>
 				Home
             </div>
-            <div class='navel'>
+            <div class='navel' id='notes'>
 				Notes
             </div>
-            <div class='navel'>
+            <div class='navel' id='attendece'>
 				Attendence
             </div>
-            <div class='navel'>
+            <div class='navel' id='about'>
 				About
             </div>
         </div>
