--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -26,6 +26,7 @@ body{
     height: calc(100% - 80px);
     transition-property: width, visibility;
     transition-duration: 0.5s;
+    z-index: 100;
 }
 .midpane{
     width: calc(60vw - 120px);
@@ -99,7 +100,11 @@ body{
 #lheading{
     color: #f5f5f5;
     /* background-color: #16a085; */
-    background-color: rgba(192, 57, 43,0.75);
+    /* background-color: rgba(192, 57, 43,0.75); */
+    /* background-color: rgba(46, 204, 113,0.75); */
+    background-color: rgba(44, 62, 80,1.0);
+    font-size: 34px;
+    margin-bottom: 30px;
 }
 #mheading{
     font-size: 20px;
@@ -116,18 +121,27 @@ body{
     width: 100%;
     /* height: calc(100% - 90px); */
     height: 100%;
+    overflow: auto;
 }
 #rheading{
     color: #f5f5f5;
-    background-color: rgba(41, 128, 185,0.75);
+    /* background-color: rgba(41, 128, 185,0.75); */
+    /* background-color: rgba(230, 126, 34,0.75); */
+    background-color: rgba(44, 62, 80,1.0);
+    font-size: 34px;
+    margin-bottom: 30px;
 }
 .navel{
     padding: 10px;
     padding-top: 20px;
     text-align: center;
-    font-size: 20px;
-    border-bottom: 2px solid #ded;
+    font-size: 30px;
+    /* border-bottom: 2px solid #ded; */
 	cursor: pointer;
+}
+.navel:hover{
+    /* background-color: rgba(192, 57, 43,0.25); */
+    background-color: rgba(46, 204, 113,0.25);
 }
 .content{
     height: calc(100% - 70px);
@@ -136,6 +150,10 @@ body{
 .event{
     float: left;
     width: calc(100% - 20px);
+}
+.event:hover{
+    /* background-color: rgba(41, 128, 185,0.25); */
+    background-color: rgba(230, 126, 34,0.25);
 }
 .date-card{
     float: right;
@@ -311,4 +329,26 @@ body{
     #hamburger-menu-button{
         display: block;
     }
+}
+#notes-view-heading{
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(52, 152, 219,0.25);
+    padding: 10px;
+}
+#notes-view-data{
+    width:calc(100% - 100px);
+    height:calc(100% - 200px);
+    padding:50px;
+    padding-top: 20px;
+    overflow:auto;
+}
+.note-date{
+    background-color: rgba(236, 240, 241,1.0);
+    display: inline-block;
+    padding: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
