--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -352,3 +352,35 @@ body{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+#about-view-heading{
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(231, 76, 60, 0.25);
+    padding: 10px;
+}
+#about-view-data{
+    width:calc(100% - 100px);
+    height:calc(100% - 200px);
+    padding:50px;
+    padding-top: 20px;
+    font-size: 20px;
+    overflow:auto;
+    text-align: center;
+}
+#team-image-container{
+    text-align: center;
+    margin-bottom: 20px
+}
+#team-image{
+    max-width: 300px;
+    width: 55%;
+    border-radius: 500px;
+}
+.team-data-heading{
+    background-color: rgba(236, 240, 241,1.0);
+    display: inline-block;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 30px;
+}
