event popup basics

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -72,6 +72,19 @@
             <div id='popup-profile-signout-button'>SIGN OUT</div>
         </div>
     </div>
+    <div class="popup">
+        <div class="popup-content" id="event-popup">
+            <div class=''>
+                <span class='span green name'>subject</span><span class='span white span-content'></span>
+            </div>
+            <div class=''>
+                <span class='span red name'>subject</span><span class='span white span-content'></span>
+            </div>
+            <div class=''>
+                <span class='span blue name'>submission</span><span class='span white span-content'></span>
+            </div>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
