working on getting the event popup working

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -74,14 +74,18 @@
     </div>
     <div class="popup">
         <div class="popup-content" id="event-popup">
-            <div class=''>
-                <span class='span green name'>subject</span><span class='span white span-content'></span>
+            <div style="text-align:center;font-size: 30px;padding-bottom: 20px;">Event</div>
+            <div class='event-pop-el'>
+                <span class='span red name'>date</span><span class='span white span-content'>12-10-2014</span>
             </div>
-            <div class=''>
-                <span class='span red name'>subject</span><span class='span white span-content'></span>
+            <div class='event-pop-el'>
+                <span class='span green name'>subject</span><span class='span white span-content'>Mathematics</span>
             </div>
-            <div class=''>
-                <span class='span blue name'>submission</span><span class='span white span-content'></span>
+            <div class='event-pop-el'>
+                <span class='span blue name'>submission</span><span class='span white span-content'>Sam Kodi</span>
+            </div>
+            <div class='event-pop-el'>
+                <span class='span yellow name'>description</span><br><br><span class='span white span-content'>Submit the most amazing thing you have ever seen in your life so that we can act like we care but not actually.</span>
             </div>
         </div>
     </div>
