--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -279,16 +279,18 @@ body{
 }
 #event-popup{
     padding: 50px;
-    padding-left: 200px;
-    padding-right: 200px;
-    text-align: center;
     background-color: #fff;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     font-family: 'Josefin Sans', sans-serif;
     z-index: 50;
-    width: 100px;
+    width: 300px;
     max-height: 60vh;
     overflow: auto;
+}
+.event-pop-el{
+    width: 90%;
+    padding: 5px;
+    margin: 5px;
 }
 #signout-popup{
     padding: 50px;
