fix upcoming_events, add calender view dummy

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -31,6 +31,9 @@
             <div class='navel' id='attendece'>
 				Attendence
             </div>
+            <div class='navel' id='calender'>
+                Calender
+            </div>
             <div class='navel' id='about'>
 				About
             </div>
@@ -77,6 +80,9 @@
             <div style="text-align:center;font-size: 30px;padding-bottom: 20px;">Event</div>
             <div class='event-pop-el'>
                 <span class='span red name'>date</span><span class='span white span-content'>12-10-2014</span>
+            </div>
+            <div class='event-pop-el'>
+                <span class='span violet name'>title</span><span class='span white span-content'>Rand Title</span>
             </div>
             <div class='event-pop-el'>
                 <span class='span green name'>subject</span><span class='span white span-content'>Mathematics</span>
