--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -12,7 +12,9 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+    <!-- <link rel="stylesheet" href="static/core/css/fullcalendar.min.css"> -->
+    <script src="static/core/js/simplemde.min.js"></script>
+    <!-- <script src="static/core/js/fullcalendar.min.js"></script> -->
   </head>
   <body>
 
