--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -203,6 +203,7 @@ body{
 }
 #profile-image{
     width: 50px;
+    height: 50px;
     border-radius: 50px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
@@ -311,6 +312,7 @@ body{
     padding-top: 12px;
     background-color: rgba(44, 62, 80,1.0);
     color: #fff;
+    cursor: pointer;
 }
 #popup-profile-image{
     margin-bottom: 10px;
