AttendenceView frontend all cool

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <!-- <link rel="stylesheet" href="static/core/css/fullcalendar.min.css"> -->
     <script src="static/core/js/simplemde.min.js"></script>
-    <!-- <script src="static/core/js/fullcalendar.min.js"></script> -->
+    <link rel="stylesheet" href="static/core/css/fullcalendar.min.css">
+    <link rel="stylesheet" href="static/core/css/fullcalendar.print.css">
   </head>
   <body>
 
@@ -100,6 +100,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="static/core/js/moment.min.js"></script>
+    <script src="static/core/js/fullcalendar.min.js"></script>
+    <script src="static/core/js/easypiechart.js"></script>
     <script src="{% static 'core/js/index.js' %}"></script>
   </body>
 </html>
