--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -354,12 +354,16 @@ body{
     font-size: 20px;
     background-color: rgba(52, 152, 219,0.25);
     padding: 10px;
+    margin-right: 100px;
+    margin-left: 100px;
+    border-radius: 100px;
 }
 #notes-view-data{
     width:calc(100% - 100px);
     height:calc(100% - 200px);
     padding:50px;
-    padding-top: 20px;
+    padding-top: 0;
+    margin-top: 20px;
     overflow:auto;
 }
 .note-date{
@@ -371,17 +375,61 @@ body{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+#calender-view-heading{
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(46, 204, 113,0.25);
+    padding: 10px;
+    margin-right: 100px;
+    margin-left: 100px;
+    border-radius: 100px;
+}
+#calender-view-data{
+    width:calc(100% - 100px);
+    height:calc(100% - 200px);
+    padding:50px;
+    padding-top: 0;
+    margin-top: 20px;
+    overflow:auto;
+}
+#attendence-view-heading{
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(243, 156, 18,0.25);
+    padding: 10px;
+    margin-right: 100px;
+    margin-left: 100px;
+    border-radius: 100px;
+}
+#attendence-view-data{
+    width:calc(100% - 100px);
+    height:calc(100% - 200px);
+    padding:50px;
+    padding-top: 0;
+    margin-top: 20px;
+    overflow:auto;
+}
+.attendence-pie{
+    width: 50%;
+    text-align: center;
+    display: inline-block;
+    padding-bottom: 20px;
+}
 #about-view-heading{
     text-align: center;
     font-size: 20px;
     background-color: rgba(231, 76, 60, 0.25);
     padding: 10px;
+    margin-right: 100px;
+    margin-left: 100px;
+    border-radius: 100px;
 }
 #about-view-data{
     width:calc(100% - 100px);
     height:calc(100% - 200px);
     padding:50px;
-    padding-top: 20px;
+    padding-top: 0;
+    margin-top: 20px;
     font-size: 20px;
     overflow:auto;
     text-align: center;
