--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -45,6 +45,7 @@
                 <img id='hamburger-menu-button' src='{%  static 'core/images/hamburger.jpg' %}'>
                 <img id="profile-image" src="" alt="profile">
                 <div id='profile-name'></div>
+                <img id='upcoming-menu-button' src='{%  static 'core/images/star.png' %}'>
             </div>
             <div id='mcontent'>
             </div>
