--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -25,18 +25,23 @@
                 Navigation
             </div>
             <div class='navel' id='home'>
+                <i class="fa fa-home" aria-hidden="true"></i>
 				Home
             </div>
             <div class='navel' id='notes'>
+                <i class="fa fa-sticky-note" aria-hidden="true"></i>
 				Notes
             </div>
             <div class='navel' id='attendece'>
+                <i class="fa fa-child" aria-hidden="true"></i>
 				Attendence
             </div>
             <div class='navel' id='calender'>
+                <i class="fa fa-calendar" aria-hidden="true"></i>
                 Calender
             </div>
             <div class='navel' id='about'>
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
 				About
             </div>
         </div>
