--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -6,6 +6,10 @@ body{
     overflow: hidden;
     font-family: 'Josefin Sans', sans-serif;
 }
+/* I am going to hell for this */
+/* .navel .fa{ */
+/*     float: left; */
+/* } */
 .fullpage{
     width: 100%;
     height: 100%;
@@ -75,7 +79,7 @@ body{
 .card.small{
     padding: 5px;
     margin: 5px;
-    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.25);
 }
 .card.medium{
     padding: 10px;
@@ -103,9 +107,10 @@ body{
     /* background-color: #16a085; */
     /* background-color: rgba(192, 57, 43,0.75); */
     /* background-color: rgba(46, 204, 113,0.75); */
-    background-color: rgba(44, 62, 80,1.0);
+    background-color: rgba(44, 62, 80, 0.75);
     font-size: 34px;
     margin-bottom: 30px;
+    border-radius: 100px;
 }
 #mheading{
     font-size: 20px;
@@ -128,9 +133,10 @@ body{
     color: #f5f5f5;
     /* background-color: rgba(41, 128, 185,0.75); */
     /* background-color: rgba(230, 126, 34,0.75); */
-    background-color: rgba(44, 62, 80,1.0);
+    background-color: rgba(44, 62, 80, 0.75);
     font-size: 34px;
     margin-bottom: 30px;
+    border-radius: 100px;
 }
 .navel{
     padding: 10px;
@@ -159,11 +165,11 @@ body{
 }
 .date-card{
     float: right;
-    background-color: #e74c3c;
+    /* background-color: #e74c3c; */
+    background-color: rgba(192, 57, 43,0.5);
     font-family: 'Josefin Sans', sans-serif;
     font-size: 14px;
     font-weight: bold;
-    color: #f5f5f5;
 }
 .subject-card{
     clear: both;
