--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -15,6 +15,7 @@
     <script src="static/core/js/simplemde.min.js"></script>
     <link rel="stylesheet" href="static/core/css/fullcalendar.min.css">
     <link rel="stylesheet" href="static/core/css/fullcalendar.print.css">
+    <link rel="stylesheet" href="{% static 'core/css/font-awesome.min.css'  %}">
   </head>
   <body>
 
@@ -25,23 +26,23 @@
                 Navigation
             </div>
             <div class='navel' id='home'>
-                <i class="fa fa-home" aria-hidden="true"></i>
+                <i class="fa fa-home" aria-hidden="true"></i><br>
 				Home
             </div>
             <div class='navel' id='notes'>
-                <i class="fa fa-sticky-note" aria-hidden="true"></i>
+                <i class="fa fa-sticky-note" aria-hidden="true"></i><br>
 				Notes
             </div>
             <div class='navel' id='attendece'>
-                <i class="fa fa-child" aria-hidden="true"></i>
+                <i class="fa fa-child" aria-hidden="true"></i><br>
 				Attendence
             </div>
             <div class='navel' id='calender'>
-                <i class="fa fa-calendar" aria-hidden="true"></i>
+                <i class="fa fa-calendar" aria-hidden="true"></i><br>
                 Calender
             </div>
             <div class='navel' id='about'>
-                <i class="fa fa-info-circle" aria-hidden="true"></i>
+                <i class="fa fa-info-circle" aria-hidden="true"></i><br>
 				About
             </div>
         </div>
