--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -48,10 +48,10 @@
         </div>
         <div class='midpane pane'>
             <div id='mheading'>
-                <img id='hamburger-menu-button' src='{%  static 'core/images/hamburger.jpg' %}'>
+                <i class="fa fa-bars" aria-hidden="true" id="hamburger-menu-button"></i>
                 <img id="profile-image" src="" alt="profile">
                 <div id='profile-name'></div>
-                <img id='upcoming-menu-button' src='{%  static 'core/images/star.png' %}'>
+                <i class="fa fa-asterisk" aria-hidden="true" id="upcoming-menu-button"></i>
             </div>
             <div id='mcontent'>
             </div>
