--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -104,6 +104,16 @@
             </div>
         </div>
     </div>
+    <div class="popup">
+        <div class="popup-content" id="choose-class-popup">
+            <div id="popup-welcome-message"></div>
+            <div id="popup-welcome-message-sub">
+                Just becase this is your first time here, please select your class.
+            </div>
+            <div id="popup-class-list"></div>
+            <div id='popup-choose-class-button'>Choose a class to proceed</div>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
