--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -38,6 +38,7 @@ body{
     height: calc(100% - 80px);
     transition-property: width;
     transition-duration: 0.5s;
+    overflow: hidden;
 }
 .rightpane{
     width: 20vw;
@@ -45,6 +46,7 @@ body{
     transition-property: width;
     transition-duration: 0.5s;
     z-index: 100;
+    overflow: auto;
 }
 @media screen and (max-width: 1050px){
     /* Remove navigation */
